<?xml version="1.0"?>
<package format="2">
  <name>jaka_controller_tcp_ros</name>
  <version>0.0.0</version>
  <description>The jaka_controller_tcp_ros package</description>
  <maintainer email="chazqd2007@126.com">Ziqi Chai</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/RobotControlAndMachineVisionLaboratory/jaka_controller_tcp_ros</url>
  <author email="chazqd2007@126.com">Ziqi Chai</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>universal_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>universal_msgs</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>universal_msgs</exec_depend>


</package>
